[package]
name = "my_rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
#serde = { version = "1.0.193" , features = ["derive"] }
#csv = "1.3.0"

[profile.dev]
panic = 'abort'
